--- a/Models/Readme
+++ b/Models/Readme
@@ -1,1 +1,1 @@
-This folder contains the CNN model architecture
+This folder contains the CNN model architecture, Classes to train the model, Classes to test the model
